[workspace]
resolver = "2"
members = [
    "client_authentication",
    "clients/actix",
    "clients/actix/sample",
    "clients/axum",
    "clients/axum/sample",
    "clients/rocket",
    "clients/rocket/sample",
]

[workspace.dependencies]
nullnet-libappguard = "0.1.10"
appguard-client-authentication = { path = "client_authentication" }
env_logger = "0.11.8"
