[package]
name = "appguard-client-authentication"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Library for AppGuard clients authentication"
repository = "https://github.com/NullNet-ai/appguard-rust-clients"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]

[dependencies]
nullnet-libappguard.workspace = true
nullnet-liberror = "0.1.1"
tokio = { version = "1.43.0", features = ["fs"] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
smbios-lib = "0.9.2"
serde_json = "1.0.145"
