[package]
name = "appguard-actix"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "AppGuard client for Actix"
repository = "https://github.com/NullNet-ai/appguard-rust-clients"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]

[dependencies]
nullnet-libappguard.workspace = true
appguard-client-authentication.workspace = true
actix-web = "4.9.0"
qstring = "0.7.2"
