[package]
name = "appguard-axum"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
nullnet-libappguard.workspace = true
appguard-client-authentication.workspace = true
axum = "0.7.9"
axum-extra = { version = "0.10.0", features = ["scheme"] }
tower = "0.5.2"
qstring = "0.7.2"