[package]
name = "appguard-axum"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "AppGuard client for Axum"
repository = "https://github.com/NullNet-ai/appguard-rust-clients"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]

[dependencies]
nullnet-libappguard.workspace = true
appguard-client-authentication.workspace = true
axum = "0.7.9"
axum-extra = { version = "0.12.2", features = ["scheme"] }
tower = "0.5.2"
qstring = "0.7.2"